// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInformations /> should render 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c10 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c9 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.4);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c9 *::-ms-backdrop,
.c9 {
  padding-right: 1.6rem;
}

.c9:invalid {
  border-color: #eb5757;
}

.c9:disabled {
  background-color: #e4e8ef;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c6 {
  display: block;
  margin-bottom: 0.4rem;
  font-size: 1.6rem;
  cursor: pointer;
}

.c8 {
  width: 40rem;
}

.c4 {
  margin: 2rem 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c8 {
    width: 100%;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Statut du salarié
    </h2>
  </header>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.ancienneté"
    >
      Quelle est l'ancienneté du salarié ?
    </label>
    <label
      class="c6"
    >
      Choissisez parmi les catégories d'ancienneté telles que définies par la convention collective
    </label>
    <div
      class="c7 c8"
    >
      <select
        class="c9"
        id="input-criteria.ancienneté"
        name="criteria.ancienneté"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="13| moins de 6 mois"
        >
          moins de 6 mois
        </option>
        <option
          value="31| 6 mois à moins de 2 ans"
        >
          6 mois à moins de 2 ans
        </option>
        <option
          value="41| plus de 2 ans"
        >
          plus de 2 ans
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c10"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepInformations /> should render catégorie 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c9 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c8 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.4);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c8 *::-ms-backdrop,
.c8 {
  padding-right: 1.6rem;
}

.c8:invalid {
  border-color: #eb5757;
}

.c8:disabled {
  background-color: #e4e8ef;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c7 {
  width: 40rem;
}

.c4 {
  margin: 2rem 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Statut du salarié
    </h2>
  </header>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.catégorie socio-professionnelle"
    >
      Quelle est la catégorie professionnelle du salarié ?
    </label>
    <div
      class="c6 c7"
    >
      <select
        class="c8"
        id="input-criteria.catégorie socio-professionnelle"
        name="criteria.catégorie socio-professionnelle"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="4| Ouvriers"
        >
          Ouvriers
        </option>
        <option
          value="16| Employés"
        >
          Employés
        </option>
        <option
          value="23| Agents de maîtrise"
        >
          Agents de maîtrise
        </option>
        <option
          value="28| Techniciens"
        >
          Techniciens
        </option>
        <option
          value="60| Ingénieurs, Cadres"
        >
          Ingénieurs, Cadres
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<StepInformations /> should render groupe 1`] = `
.c3 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c6 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c9 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c8 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.4);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c8::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c8 *::-ms-backdrop,
.c8 {
  padding-right: 1.6rem;
}

.c8:invalid {
  border-color: #eb5757;
}

.c8:disabled {
  background-color: #e4e8ef;
}

.c0 {
  margin: 0 auto 1rem;
  text-align: left;
}

.c2 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 2.8rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 3.2rem;
  text-align: left;
}

.c5 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c7 {
  width: 40rem;
}

.c4 {
  margin: 2rem 0;
}

.c1 {
  margin-top: 3.2rem;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c2 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c2 {
    font-size: 2.2rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

<div>
  <header
    class="c0 c1"
  >
    <h2
      class="c2"
    >
      <div
        class="c3"
      />
      Statut du salarié
    </h2>
  </header>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.catégorie socio-professionnelle"
    >
      Quelle est la catégorie professionnelle du salarié ?
    </label>
    <div
      class="c6 c7"
    >
      <select
        class="c8"
        id="input-criteria.catégorie socio-professionnelle"
        name="criteria.catégorie socio-professionnelle"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="4| Ouvriers"
        >
          Ouvriers
        </option>
        <option
          value="16| Employés"
        >
          Employés
        </option>
        <option
          value="23| Agents de maîtrise"
        >
          Agents de maîtrise
        </option>
        <option
          value="28| Techniciens"
        >
          Techniciens
        </option>
        <option
          value="60| Ingénieurs, Cadres"
        >
          Ingénieurs, Cadres
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
  <div
    class="c4"
  >
    <label
      class="c5"
      for="input-criteria.groupe"
    >
      Dans quel groupe professionnel le salarié se situe-t-il ?
    </label>
    <div
      class="c6 c7"
    >
      <select
        class="c8"
        id="input-criteria.groupe"
        name="criteria.groupe"
      >
        <option
          disabled=""
          value=""
        >
          ...
        </option>
        <option
          value="6| IV"
        >
          IV
        </option>
      </select>
      <div
        aria-hidden="true"
        class="c9"
      >
        <svg
          fill="none"
          viewBox="0 0 16 16"
        >
          <g
            clip-path="url(#arrow-down_svg__clip0)"
          >
            <path
              d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
              fill="currentColor"
            />
          </g>
          <defs>
            <clippath
              id="arrow-down_svg__clip0"
            >
              <path
                d="M0 0h16v16H0z"
                fill="currentColor"
              />
            </clippath>
          </defs>
        </svg>
      </div>
    </div>
  </div>
</div>
`;
